# RadarSim

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  Component.h  ConfigurationWindow.cpp  ConfigurationWindow.h  Constants.h  ControlsWindow.cpp  GLUtils.h  ModelManager.cpp  ModelManager.h  PhasedArrayBeam.cpp  PopOutWindow.cpp  PopOutWindow.h  RadarBeam.cpp  RadarBeam.h  RadarSim.cpp  RadarSim.h  SphereWidget.cpp  SphereWidget.h  TODO.md  main.cpp
.claude/: settings.local.json
AiScripts/: gemini_server.py
Beam/: BeamController.cpp  BeamController.h  ConicalBeam.cpp  PhasedArrayBeam.h  RadarBeam.cpp  RadarBeam.h  SincBeam.h  SingleRayBeam.cpp  SingleRayBeam.h
Common/: Constants.h
Component/: Component.cpp  Entity.cpp  Entity.h
Config/: AppSettings.cpp  AppSettings.h  BeamConfig.h  SceneConfig.h  TargetConfig.h
Docs/: adding_features.md  architecture.md  optimization_patterns.md  shadow_system.md  ui_patterns.md
ModelManager/: ModelManager.cpp  ModelManager.h
PolarPlot/: PolarRCSPlot.cpp  PolarRCSPlot.h
RCS/: BounceEffect.h  BounceEffectPipeline.cpp  BounceEffectPipeline.h  RayTraceTypes.h
RCSCompute/: AzimuthCutSampler.cpp  AzimuthCutSampler.h  BVHBuilder.cpp  ElevationCutSampler.h  RCSCompute.cpp  RCSCompute.h  RCSSampler.h  RCSTypes.h  SlicingPlaneRenderer.h
RadarBeam/: BeamController.cpp  BeamController.h  ConicalBeam.cpp  ConicalBeam.h  EllipticalBeam.cpp  EllipticalBeam.h  PhasedArrayBeam.cpp  PhasedArrayBeam.h  RadarBeam.cpp  RadarBeam.h  SincBeam.cpp  SincBeam.h
RadarSceneWidget/: BeamController.cpp  BeamController.h  CameraController.cpp  CameraController.h  RadarGLWidget.cpp  RadarGLWidget.h  RadarSceneWidget.cpp  RadarSceneWidget.h  SphereRenderer.cpp  SphereRenderer.h  SphereWidget.cpp  SphereWidget.h
ReflectionRenderer/: HeatMapRenderer.cpp  HeatMapRenderer.h  ReflectionRenderer.cpp  ReflectionRenderer.h
Rendering/: BounceRenderer.cpp  BounceRenderer.h
UI/ConfigurationWindow/: CameraConfig.h  ConfigurationWindow.cpp  ConfigurationWindow.h  SceneConfig.h  TargetConfig.h
UI/ControlsWindow/: ControlsWindow.h
UI/MainWindow/: RadarSim.cpp  RadarSim.h
UI/MainWindow/Camera/: CameraController.h
UI/MainWindow/Controls/: RCSPlaneControlsWidget.cpp  RCSPlaneControlsWidget.h  RadarControlsWidget.cpp  RadarControlsWidget.h  TargetControlsWidget.cpp  TargetControlsWidget.h
UI/MainWindow/PopOutPane/: FBORenderer.cpp  FBORenderer.h  PopOutWindow.cpp  TextureBlitWidget.cpp  TextureBlitWidget.h
UI/MainWindow/RCSPane/Compute/: BVHBuilder.h  RCSCompute.cpp  RCSCompute.h  RCSTypes.h
UI/MainWindow/RCSPane/PolarPlot/: PolarRCSPlot.cpp  PolarRCSPlot.h
UI/MainWindow/RCSPane/Sampling/: AzimuthCutSampler.h  ElevationCutSampler.cpp  ElevationCutSampler.h  RCSSampler.h
UI/MainWindow/RadarPane/: RadarGLWidget.cpp  RadarGLWidget.h  RadarSceneWidget.cpp  RadarSceneWidget.h
UI/MainWindow/RadarPane/Camera/: CameraController.cpp  CameraController.h
UI/MainWindow/RadarPane/Cones/: ReflectionRenderer.h
UI/MainWindow/RadarPane/Debug/: DebugRayRenderer.cpp  DebugRayRenderer.h
UI/MainWindow/RadarPane/HeatMap/: HeatMapRenderer.cpp  HeatMapRenderer.h
UI/MainWindow/RadarPane/RadarSite/: RadarSiteRenderer.cpp  RadarSiteRenderer.h
UI/MainWindow/RadarPane/SlicingPlane/: SlicingPlaneRenderer.cpp
UI/MainWindow/RadarPane/Sphere/: SphereRenderer.cpp  SphereRenderer.h
WireframeTarget/: AircraftWireframe.cpp  CubeWireframe.cpp  CylinderWireframe.cpp  CylinderWireframe.h  WireframeShapes.h  WireframeTarget.cpp  WireframeTarget.h  WireframeTargetController.cpp  WireframeTargetController.h
